# AudioNormalizer

./: LICENCE  README.md  controller.py  main  main.py  normalizer.py  pyproject.toml  requirements.txt  setup.py  user_interface.py
audio_normalizer/: __init__.py  controller.py  normalizer.py  user_interface.py  utils.py
docs/: README.md
tests/: test_normalizer.py
