[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_normalizer"
version = "1.0"
authors = [
  { name="Matthias Christopher Schmid", email="schmid.mat93@gmail.com" },
]
description = "Audio Normalizer for MP3 and WAV files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU General Public License v3",
    "Operating System :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/MatthiasSchmid93/AudioNormalizer"
"Bug Tracker" = "https://github.com/MatthiasSchmid93/AudioNormalizer/issues"